<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuHome"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>

    <item
        android:id="@+id/placeholder"
        android:title="" />

    <item
        android:id="@+id/menuProfile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

</menu>