...
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintStart_toEndOf="@+id/ivProfile"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvStory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:listitem="@layout/item_story"
            android:paddingBottom="70dp"
...
